--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
             <artifactId>spring-aop</artifactId>
             <version>5.0.4.RELEASE</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.0.4.RELEASE</version>
+        </dependency>
+
 
 
     </dependencies>
